<resources>
    <string name="app_name">ToDoList</string>
    <string name="complete">Complete!</string>
    <string name="description">Description</string>
    <string name="title_here">Title Here</string>
    <string name="title">Title</string>
    <string name="change_date">Change Date</string>
    <string name="confirm">confirm</string>
    <string name="details">Details</string>
    <string name="enter_description_of_task">Enter description of task...</string>
    <string name="enter_title_of_task">Enter title of task...</string>
    <string name="task">Task</string>
    <string name="task_complete">Task Complete!</string>
</resources>
