<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="10dp">

    <EditText
        android:id="@+id/et_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:hint="@string/enter_title_of_task"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_description_header"
        android:layout_below="@id/et_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/details"
        android:textSize="12sp"
        style="?android:listSeparatorTextViewStyle"/>

    <EditText
        android:id="@+id/et_description"
        android:layout_below="@id/tv_description_header"
        android:layout_above="@id/btn_change_date"
        android:background="@drawable/edit_text_style1"
        android:hint="@string/enter_description_of_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:padding="10dp"
        android:layout_margin="5dp"/>

    <TextView
        android:id="@+id/tv_date"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@id/btn_change_date"
        android:layout_alignBottom="@id/btn_change_date"
        android:layout_alignTop="@id/btn_change_date"
        android:layout_alignParentStart="true"
        tools:text="11/13/17"/>
    <Button
        android:id="@+id/btn_change_date"
        android:text="@string/change_date"
        android:layout_above="@id/btn_confirm"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_complete"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/complete"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btn_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@id/btn_complete"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="20dp"
        android:src="@drawable/ic_check_white_24dp" />


</RelativeLayout>